updated loadEmployeeData function to include eventListener for when employeeElement is clicked. When clicked option to delete employee from localStorage using confirm() pops up. if true, findIndex will be used in employees array in localStorage and remove employeeElement. Still have to update the removal of employeeSlotsHTML in localStorage in order to completely remove employeeElement from the DOM.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <nav class="topNavBar">
         <div class="employeeButtonContainer">
             <button type="button" class="addEmployeeButton">ADD EMPLOYEE</button>
+
+            <!-- <div class="trashCan">
+                <img src="images/delete.png" height="100" width="100">
+                <span>drag employee to delete</span>
+            </div> -->
+
         </div>
 
         <div>
@@ -27,22 +33,19 @@
     <div class="entireContainer">
 
         <div class="employeeBlockContainer">
+
             <div id="employeeSlotToggle" class="employeeSlotToggle" draggable="true">
-                <span id="employeeName" class="employeeName">???</span>
+                <span id="employeeName" class="employeeName">Employees</span>
             </div>
+
         </div>
         
-
         <div class="workWeekContainer">
 
             <table>
 
                 <tr class="headers">
-                    <td class="weekDay">
-                        <div class="trashCan">
-                            <img src="images/delete.png" height="100" width="100">
-                        </div>
-                    </td>
+                    <td class="weekDay"></td>
                     <td class="hp1">HP1</td>
                     <td class="hp1Left"></td>
                     <td class="hp2">HP2</td>
@@ -118,8 +121,7 @@
         </div>
     </div>
 
-
-    <div class="employeeEditCard">
+    <!-- <div class="employeeEditCard">
         <div>
             <span>Monday</span>
             <div>
@@ -189,7 +191,7 @@
                 <label for="pm">PM</label>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <script src="js/main.js"></script>
 </body>
