created eventListener for employeeElements, when clicked option to delete employee will remove employee from localStorage. Fixed error when employee was delted it removed all employees from the employeeSlotsArray. Removed the toggle functionality for employeeEdit card, will no longer use that. Also restructered the way the employeeElement's HTML was being saved into localStorage, it now gets stored into an array saved into localStorage

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <table>
 
                 <tr class="headers">
-                    <td class="weekDay"></td>
+                    <td class="weekDay">WEEK OF 9/4-9/10</td>
                     <td class="hp1">HP1</td>
                     <td class="hp1Left"></td>
                     <td class="hp2">HP2</td>
@@ -53,11 +53,11 @@
                 </tr>
     
                 <tr class="shifts">
-                    <td class="weekDay"></td>
-                    <td>10:00 - 3:30</td>
-                    <td>3:30 - 9:00</td>
-                    <td>10:00 - 3:30</td>
-                    <td>3:30 - 9:00</td>
+                    <td id="extraInfo" class="weekDay">NOTE: WEEKDAY MON-THURS PM SHIFTS CLOSE 8PM</td>
+                    <td>10:00 - 4:00</td>
+                    <td>4:00 - 9:00</td>
+                    <td>10:00 - 4:00</td>
+                    <td>4:00 - 9:00</td>
                 </tr>
     
                 <tr class="people">
