fixed issue that would not allow employee creation if all employees were deleted due to how employeeElements clone. Added functionality to edit schedule notes/date/shifts and touched up html/css of hours calculator

--- a/calculator.html
+++ b/calculator.html
@@ -13,36 +13,53 @@
 </head>
 <body>
     <div class="entireContainer">
-        <div class="weekDays">
+
+        <div class="weekday">
             <span>Monday</span>
-            <span>Tuesday</span>
-            <span>Wednesday</span>
-            <span>Thursday</span>
-            <span>Friday</span>
-            <span>Saturday</span>
-            <span>Sunday</span>
+            <input type="time">
+            <input type="time">
         </div>
 
-        <div class="timeContainer">
-            <div>
-                <input type="time">
-                <input type="time">
-                <input type="time">
-                <input type="time">
-                <input type="time">
-                <input type="time">
-                <input type="time">
-            </div>
-            <div>
-                <input type="time">
-                <input type="time">
-                <input type="time">
-                <input type="time">
-                <input type="time">
-                <input type="time">
-                <input type="time">
-            </div>
+        <div class="weekday">
+            <span>Tuesday</span>
+            <input type="time">
+            <input type="time">
         </div>
+
+        <div class="weekday">
+            <span>Wednesday</span>
+            <input type="time">
+            <input type="time">
+        </div>
+
+        <div class="weekday">
+            <span>Thursday</span>
+            <input type="time">
+            <input type="time">
+        </div>
+
+        <div class="weekday">
+            <span>Friday</span>
+            <input type="time">
+            <input type="time">
+        </div>
+
+        <div class="weekday">
+            <span>Saturday</span>
+            <input type="time">
+            <input type="time">
+        </div>
+
+        <div class="weekday">
+            <span>Sunday</span>
+            <input type="time">
+            <input type="time">
+        </div>
+
+        <div class="total">
+            <span>TOTAL HOURS: </span>
+        </div>
+
     </div>
     
     <script src="js/calculator.js"></script>
