--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="employeeBlockContainer">
 
             <div id="employeeSlotToggle" class="employeeSlotToggle" draggable="true">
-                <span id="employeeName" class="employeeName">Employees</span>
+                <span id="employeeName" class="employeeName">Drag/Drop</span>
             </div>
 
         </div>
@@ -45,7 +45,7 @@
             <table>
 
                 <tr class="headers">
-                    <td class="weekDay">WEEK OF 9/4-9/10</td>
+                    <td id="dateOfWeek" class="weekDay dateOfWeek">Click to edit</td>
                     <td class="hp1">HP1</td>
                     <td class="hp1Left"></td>
                     <td class="hp2">HP2</td>
@@ -53,11 +53,11 @@
                 </tr>
     
                 <tr class="shifts">
-                    <td id="extraInfo" class="weekDay">NOTE: WEEKDAY MON-THURS PM SHIFTS CLOSE 8PM</td>
-                    <td>10:00 - 4:00</td>
-                    <td>4:00 - 9:00</td>
-                    <td>10:00 - 4:00</td>
-                    <td>4:00 - 9:00</td>
+                    <td id="extraInfo" class="weekDay extraInfo">Edit Text</td>
+                    <td id="amShiftHP1" class="shiftSlot">10:00 - 4:00</td>
+                    <td id="pmShiftHP1" class="shiftSlot">4:00 - 9:00</td>
+                    <td id="amShiftHP2" class="shiftSlot">10:00 - 4:00</td>
+                    <td id="pmShiftHP2" class="shiftSlot">4:00 - 9:00</td>
                 </tr>
     
                 <tr class="people">
@@ -120,78 +120,6 @@
 
         </div>
     </div>
-
-    <!-- <div class="employeeEditCard">
-        <div>
-            <span>Monday</span>
-            <div>
-                <input type="checkbox" value="am">
-                <label for="am">AM</label>
-                <input type="checkbox" value="pm">
-                <label for="pm">PM</label>
-            </div>
-        </div>
-
-        <div>
-            <span>Tuesday</span>
-            <div>
-                <input type="checkbox" value="am">
-                <label for="am">AM</label>
-                <input type="checkbox" value="pm">
-                <label for="pm">PM</label>
-            </div>
-        </div>
-
-        <div>
-            <span>Wednesday</span>
-            <div>
-                <input type="checkbox" value="am">
-                <label for="am">AM</label>
-                <input type="checkbox" value="pm">
-                <label for="pm">PM</label>
-            </div>
-        </div>
-
-        <div>
-            <span>Thursday</span>
-            <div>
-                <input type="checkbox" value="am">
-                <label for="am">AM</label>
-                <input type="checkbox" value="pm">
-                <label for="pm">PM</label>
-            </div>
-        </div>
-
-        <div>
-            <span>Friday</span>
-            <div>
-                <input type="checkbox" value="am">
-                <label for="am">AM</label>
-                <input type="checkbox" value="pm">
-                <label for="pm">PM</label>
-            </div>
-        </div>
-
-        <div>
-            <span>Saturday</span>
-            <div>
-                <input type="checkbox" value="am">
-                <label for="am">AM</label>
-                <input type="checkbox" value="pm">
-                <label for="pm">PM</label>
-            </div>
-        </div>
-
-        <div>
-            <span>Sunday</span>
-            <div>
-                <input type="checkbox" value="am">
-                <label for="am">AM</label>
-                <input type="checkbox" value="pm">
-                <label for="pm">PM</label>
-            </div>
-        </div>
-    </div> -->
 
     <script src="js/main.js"></script>
 </body>
